# pysparky-pyspark-helper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  CONTRIBUTING.md  README.md  dev.ipynb  example.py  index.html  lint.sh  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_pytests.py  sitemap.xml
data_validator/: index.html
debug/: index.html
decorator/: index.html
docs/: data_validator.md  debug.md  decorator.md  enabler.md  functions.md  index.md  quality.py  schema_ext.md  spark_ext.md  test_admonition.md  transformation_ext.md  utils.md
enabler/: index.html
example/: 001.ipynb  data_checking.ipynb  dev.ipynb  filter_columns_schema.ipynb  similarity.ipynb  spark_config.ipynb  transformers.ipynb  transformers_spark.py  transforms.ipynb  transforms_split_dataframe.ipynb  validate_columns.py  validate_schema.py  vectors.ipynb
functions/: index.html
pysparky/: data_validator.py  debug.py  decorator.py  enabler.py  functions_ext.py  functions_math.py  io.py  quality.py  schema_ext.py  spark_configs.py  spark_ext.py  transformation_ext.py  typing.py  utils.py
pysparky.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quality/: index.html
schema_ext/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
spark_ext/: index.html
test_admonition/: index.html
tests/: conftest.py  spark.py  test_cenz.py  test_data_validator.py  test_debug.py  test_decorator.py  test_enabler.py  test_functions_ext.py  test_functions_math.py  test_math.py  test_quality.py  (+4 more)
(+107 files in other folders)
