[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysparky"
version = "0.1.0"
description = "A Python package that assists you in writing PySpark code."
authors = [
    { name="PySparky" }
]
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.0.0"
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
